@@ -5793,10 +5793,6 @@ fast/loader/crash-copying-backforwardlist.html
 # https://bugs.webkit.org/show_bug.cgi?id=34086
 media/video-reverse-play-duration.html
 
-# Implement LayoutTestController::pageNumberForElementById().
-printing/page-break-always.html
-printing/pageNumerForElementById.html
-
 # Intermittently timing out on Gtk Debug Bot:
 # https://bugs.webkit.org/show_bug.cgi?id=33445
 http/tests/incremental/split-hex-entities.pl
