@@ -1,3 +1,12 @@
+2010-02-05  Shinichiro Hamaji  <hamaji@chromium.org>
+
+        Reviewed by Gustavo Noronha Silva.
+
+        [Gtk] Implement layoutTestController.pageNumberForElementById
+        https://bugs.webkit.org/show_bug.cgi?id=34572
+
+        * platform/gtk/Skipped:
+
 2010-02-05  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Beth Dakin.
